apps/staging/calcom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calcom
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - calendar.justindesio.com
      secretName: calcom-tls
  rules:
    - host: calendar.justindesio.com
      http:
        paths:
          - backend:
              service:
                name: calcom
                port:
                  number: 3000
            path: /
            pathType: Prefix
